# simple_support_telegram_bot

./: .gitignore  README.md  pyproject.toml  start.py
support_bot/: bot.py  config.py
support_bot/handlers/: callback.py  dialog.py  main.py
support_bot/modules/: base.py  utils.py
support_bot/states/: answer.py  question.py
