[tool.poetry]
name = "support-bot"
version = "0.1.0"
description = "Support bot"
authors = ["dex <dexkorzhov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
aiogram = "^3.2.0"
tinydb = "^4.8.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
